Bug 1399086 - Ensure that swipes on magic mice and back/forward buttons on other mice work as expected on macOS after the SDK switch to 10.11. r=mstange, a=sledru

--HG--
extra : source : 006387a24bc91455ea66f2a37171a06817adb274